// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DSL checkDSL() invalid code should handle \`no definitions\` 1`] = `
Array [
  Object {
    "endColumn": 9007199254740991,
    "endLineNumber": 2,
    "message": "Invalid syntax",
    "severity": 8,
    "source": "linter",
    "startColumn": 0,
    "startLineNumber": 0,
  },
]
`;

exports[`DSL checkDSL() invalid code should handle \`no relations\` 1`] = `
Array [
  Object {
    "endColumn": 9007199254740991,
    "endLineNumber": 1,
    "message": "Invalid syntax",
    "severity": 8,
    "source": "linter",
    "startColumn": 0,
    "startLineNumber": 0,
  },
]
`;

exports[`DSL checkDSL() invalid keywords should handle invalid \`and\` 1`] = `
Array [
  Object {
    "endColumn": 37,
    "endLineNumber": 4,
    "message": "Invalid syntax",
    "severity": 8,
    "source": "linter",
    "startColumn": 28,
    "startLineNumber": 4,
  },
]
`;

exports[`DSL checkDSL() invalid keywords should handle invalid \`as\` 1`] = `
Array [
  Object {
    "endColumn": 26,
    "endLineNumber": 3,
    "message": "Invalid syntax",
    "severity": 8,
    "source": "linter",
    "startColumn": 19,
    "startLineNumber": 3,
  },
]
`;

exports[`DSL checkDSL() invalid keywords should handle invalid \`as\` 2`] = `
Array [
  Object {
    "endColumn": 26,
    "endLineNumber": 3,
    "message": "Invalid syntax",
    "severity": 8,
    "source": "linter",
    "startColumn": 19,
    "startLineNumber": 3,
  },
]
`;

exports[`DSL checkDSL() invalid keywords should handle invalid \`but not\` 1`] = `
Array [
  Object {
    "endColumn": 41,
    "endLineNumber": 4,
    "message": "Invalid syntax",
    "severity": 8,
    "source": "linter",
    "startColumn": 32,
    "startLineNumber": 4,
  },
]
`;

exports[`DSL checkDSL() invalid keywords should handle invalid \`define\` 1`] = `
Array [
  Object {
    "endColumn": 27,
    "endLineNumber": 3,
    "message": "Invalid syntax",
    "severity": 8,
    "source": "linter",
    "startColumn": 6,
    "startLineNumber": 3,
  },
]
`;

exports[`DSL checkDSL() invalid keywords should handle invalid \`or\` 1`] = `
Array [
  Object {
    "endColumn": 36,
    "endLineNumber": 4,
    "message": "Invalid syntax",
    "severity": 8,
    "source": "linter",
    "startColumn": 27,
    "startLineNumber": 4,
  },
]
`;

exports[`DSL checkDSL() invalid keywords should handle invalid \`self\` 1`] = `
Array [
  Object {
    "endColumn": 26,
    "endLineNumber": 3,
    "message": "Invalid syntax",
    "severity": 8,
    "source": "linter",
    "startColumn": 24,
    "startLineNumber": 3,
  },
]
`;

exports[`DSL checkDSL() semantics should allow self reference 1`] = `Array []`;

exports[`DSL checkDSL() semantics should be able to handle more than one error 1`] = `
Array [
  Object {
    "endColumn": 28,
    "endLineNumber": 3,
    "message": "For auto-referencing use \`self\`.",
    "relatedInformation": Object {
      "type": "self-error",
    },
    "severity": 8,
    "source": "linter",
    "startColumn": 22,
    "startLineNumber": 3,
  },
  Object {
    "endColumn": 33,
    "endLineNumber": 5,
    "message": "The relation \`relation2\` does not exist.",
    "relatedInformation": Object {
      "type": "",
    },
    "severity": 8,
    "source": "linter",
    "startColumn": 24,
    "startLineNumber": 5,
  },
  Object {
    "endColumn": 48,
    "endLineNumber": 5,
    "message": "The relation \`relation2\` does not exist in type \`group\`",
    "relatedInformation": Object {
      "type": "",
    },
    "severity": 8,
    "source": "linter",
    "startColumn": 39,
    "startLineNumber": 5,
  },
  Object {
    "endColumn": 55,
    "endLineNumber": 6,
    "message": "Cannot self-reference (\`domain\`) within \`but not\` clause.",
    "relatedInformation": Object {
      "type": "",
    },
    "severity": 8,
    "source": "linter",
    "startColumn": 49,
    "startLineNumber": 6,
  },
]
`;

exports[`DSL checkDSL() semantics should handle duplicated definition 1`] = `
Array [
  Object {
    "endColumn": 26,
    "endLineNumber": 4,
    "message": "Duplicate definition \`writer\`.",
    "relatedInformation": Object {
      "type": "duplicated-error",
    },
    "severity": 8,
    "source": "linter",
    "startColumn": 5,
    "startLineNumber": 4,
  },
]
`;

exports[`DSL checkDSL() semantics should handle invalid \`invalid and\` 1`] = `
Array [
  Object {
    "endColumn": 37,
    "endLineNumber": 3,
    "message": "The relation \`reader\` does not exist.",
    "relatedInformation": Object {
      "relation": "reader",
      "type": "missing-definition",
    },
    "severity": 8,
    "source": "linter",
    "startColumn": 31,
    "startLineNumber": 3,
  },
]
`;

exports[`DSL checkDSL() semantics should handle invalid \`invalid but not\` 1`] = `
Array [
  Object {
    "endColumn": 41,
    "endLineNumber": 3,
    "message": "The relation \`reader\` does not exist in type \`group\`",
    "relatedInformation": Object {
      "type": "",
    },
    "severity": 8,
    "source": "linter",
    "startColumn": 35,
    "startLineNumber": 3,
  },
]
`;

exports[`DSL checkDSL() semantics should handle invalid \`invalid from\` 1`] = `
Array [
  Object {
    "endColumn": 36,
    "endLineNumber": 3,
    "message": "The relation \`reader\` does not exist.",
    "relatedInformation": Object {
      "type": "",
    },
    "severity": 8,
    "source": "linter",
    "startColumn": 30,
    "startLineNumber": 3,
  },
  Object {
    "endColumn": 46,
    "endLineNumber": 3,
    "message": "The relation \`test\` does not exist in type \`group\`",
    "relatedInformation": Object {
      "type": "",
    },
    "severity": 8,
    "source": "linter",
    "startColumn": 42,
    "startLineNumber": 3,
  },
]
`;

exports[`DSL checkDSL() semantics should handle invalid \`invalid or\` 1`] = `
Array [
  Object {
    "endColumn": 36,
    "endLineNumber": 3,
    "message": "The relation \`reader\` does not exist.",
    "relatedInformation": Object {
      "relation": "reader",
      "type": "missing-definition",
    },
    "severity": 8,
    "source": "linter",
    "startColumn": 30,
    "startLineNumber": 3,
  },
]
`;

exports[`DSL checkDSL() semantics should handle invalid \`relation not define\` 1`] = `
Array [
  Object {
    "endColumn": 28,
    "endLineNumber": 3,
    "message": "The relation \`reader\` does not exist.",
    "relatedInformation": Object {
      "relation": "reader",
      "type": "missing-definition",
    },
    "severity": 8,
    "source": "linter",
    "startColumn": 22,
    "startLineNumber": 3,
  },
]
`;

exports[`DSL checkDSL() semantics should handle invalid \`self-error\` 1`] = `
Array [
  Object {
    "endColumn": 28,
    "endLineNumber": 3,
    "message": "For auto-referencing use \`self\`.",
    "relatedInformation": Object {
      "type": "self-error",
    },
    "severity": 8,
    "source": "linter",
    "startColumn": 22,
    "startLineNumber": 3,
  },
]
`;

exports[`DSL checkDSL() semantics should handle invalid \`self-ref in but not\` 1`] = `
Array [
  Object {
    "endColumn": 41,
    "endLineNumber": 3,
    "message": "Cannot self-reference (\`writer\`) within \`but not\` clause.",
    "relatedInformation": Object {
      "type": "",
    },
    "severity": 8,
    "source": "linter",
    "startColumn": 35,
    "startLineNumber": 3,
  },
]
`;

exports[`DSL checkDSL() semantics should not allow impossible self reference 1`] = `
Array [
  Object {
    "endColumn": 40,
    "endLineNumber": 3,
    "message": "Cannot self-reference (\`member\`) within \`from\` clause.",
    "relatedInformation": Object {
      "type": "",
    },
    "severity": 8,
    "source": "linter",
    "startColumn": 34,
    "startLineNumber": 3,
  },
]
`;

exports[`DSL parseDSL() should correctly parse a complex sample 1`] = `
Array [
  Array [
    Array [
      Array [],
      Array [
        "type",
        Array [
          Array [
            " ",
          ],
        ],
      ],
      Array [
        Array [
          null,
          Array [
            Array [
              "t",
            ],
            Array [
              "e",
            ],
            Array [
              "a",
            ],
            Array [
              "m",
            ],
          ],
        ],
        Array [],
      ],
      Array [
        Array [
          Array [
            Array [
              Array [],
            ],
            "
",
          ],
        ],
      ],
    ],
    Array [
      Array [],
      Array [
        "  relations",
        Array [],
      ],
      Array [
        Array [
          Array [
            Array [
              Array [],
            ],
            "
",
          ],
        ],
      ],
    ],
    Array [
      Array [
        Array [
          Array [],
          Array [
            Array [
              "    define",
              Array [
                Array [
                  " ",
                ],
              ],
            ],
            Array [
              Array [
                null,
                Array [
                  Array [
                    "m",
                  ],
                  Array [
                    "e",
                  ],
                  Array [
                    "m",
                  ],
                  Array [
                    "b",
                  ],
                  Array [
                    "e",
                  ],
                  Array [
                    "r",
                  ],
                ],
              ],
              Array [],
            ],
            Array [
              Array [
                " ",
              ],
            ],
            Array [
              "as",
              Array [
                Array [
                  " ",
                ],
              ],
            ],
            Array [
              Array [
                Array [
                  null,
                  Array [
                    Array [
                      "s",
                    ],
                    Array [
                      "e",
                    ],
                    Array [
                      "l",
                    ],
                    Array [
                      "f",
                    ],
                  ],
                ],
                Array [],
              ],
            ],
          ],
          Array [
            Array [
              Array [
                Array [
                  Array [],
                ],
                "
",
              ],
            ],
            Array [
              Array [
                Array [
                  Array [],
                ],
                "
",
              ],
            ],
          ],
        ],
      ],
    ],
  ],
  Array [
    Array [
      Array [],
      Array [
        "type",
        Array [
          Array [
            " ",
          ],
        ],
      ],
      Array [
        Array [
          null,
          Array [
            Array [
              "r",
            ],
            Array [
              "e",
            ],
            Array [
              "p",
            ],
            Array [
              "o",
            ],
          ],
        ],
        Array [],
      ],
      Array [
        Array [
          Array [
            Array [
              Array [],
            ],
            "
",
          ],
        ],
      ],
    ],
    Array [
      Array [],
      Array [
        "  relations",
        Array [],
      ],
      Array [
        Array [
          Array [
            Array [
              Array [],
            ],
            "
",
          ],
        ],
      ],
    ],
    Array [
      Array [
        Array [
          Array [],
          Array [
            Array [
              Array [
                "    define",
                Array [
                  Array [
                    " ",
                  ],
                ],
              ],
              Array [
                Array [
                  null,
                  Array [
                    Array [
                      "a",
                    ],
                    Array [
                      "d",
                    ],
                    Array [
                      "m",
                    ],
                    Array [
                      "i",
                    ],
                    Array [
                      "n",
                    ],
                  ],
                ],
                Array [],
              ],
              Array [
                Array [
                  " ",
                ],
              ],
              Array [
                "as",
                Array [
                  Array [
                    " ",
                  ],
                ],
              ],
              Array [
                Array [
                  Array [
                    null,
                    Array [
                      Array [
                        "s",
                      ],
                      Array [
                        "e",
                      ],
                      Array [
                        "l",
                      ],
                      Array [
                        "f",
                      ],
                    ],
                  ],
                  Array [
                    " ",
                  ],
                ],
              ],
            ],
            Array [
              Array [
                Array [
                  "or",
                  Array [
                    Array [
                      " ",
                    ],
                  ],
                  Array [
                    Array [
                      Array [
                        Array [
                          null,
                          Array [
                            Array [
                              "r",
                            ],
                            Array [
                              "e",
                            ],
                            Array [
                              "p",
                            ],
                            Array [
                              "o",
                            ],
                            Array [
                              "_",
                            ],
                            Array [
                              "a",
                            ],
                            Array [
                              "d",
                            ],
                            Array [
                              "m",
                            ],
                            Array [
                              "i",
                            ],
                            Array [
                              "n",
                            ],
                          ],
                        ],
                        Array [],
                      ],
                      Array [
                        Array [
                          " ",
                        ],
                      ],
                      "from",
                      Array [
                        Array [
                          " ",
                        ],
                      ],
                      Array [
                        Array [
                          null,
                          Array [
                            Array [
                              "o",
                            ],
                            Array [
                              "w",
                            ],
                            Array [
                              "n",
                            ],
                            Array [
                              "e",
                            ],
                            Array [
                              "r",
                            ],
                          ],
                        ],
                        Array [],
                      ],
                    ],
                  ],
                ],
              ],
            ],
          ],
          Array [
            Array [
              Array [
                Array [
                  Array [],
                ],
                "
",
              ],
            ],
          ],
        ],
      ],
      Array [
        Array [
          Array [],
          Array [
            Array [
              Array [
                "    define",
                Array [
                  Array [
                    " ",
                  ],
                ],
              ],
              Array [
                Array [
                  null,
                  Array [
                    Array [
                      "m",
                    ],
                    Array [
                      "a",
                    ],
                    Array [
                      "i",
                    ],
                    Array [
                      "n",
                    ],
                    Array [
                      "t",
                    ],
                    Array [
                      "a",
                    ],
                    Array [
                      "i",
                    ],
                    Array [
                      "n",
                    ],
                    Array [
                      "e",
                    ],
                    Array [
                      "r",
                    ],
                  ],
                ],
                Array [],
              ],
              Array [
                Array [
                  " ",
                ],
              ],
              Array [
                "as",
                Array [
                  Array [
                    " ",
                  ],
                ],
              ],
              Array [
                Array [
                  Array [
                    null,
                    Array [
                      Array [
                        "s",
                      ],
                      Array [
                        "e",
                      ],
                      Array [
                        "l",
                      ],
                      Array [
                        "f",
                      ],
                    ],
                  ],
                  Array [
                    " ",
                  ],
                ],
              ],
            ],
            Array [
              Array [
                Array [
                  "or",
                  Array [
                    Array [
                      " ",
                    ],
                  ],
                  Array [
                    Array [
                      Array [
                        null,
                        Array [
                          Array [
                            "a",
                          ],
                          Array [
                            "d",
                          ],
                          Array [
                            "m",
                          ],
                          Array [
                            "i",
                          ],
                          Array [
                            "n",
                          ],
                        ],
                      ],
                      Array [],
                    ],
                  ],
                ],
              ],
            ],
          ],
          Array [
            Array [
              Array [
                Array [
                  Array [],
                ],
                "
",
              ],
            ],
          ],
        ],
      ],
      Array [
        Array [
          Array [],
          Array [
            Array [
              "    define",
              Array [
                Array [
                  " ",
                ],
              ],
            ],
            Array [
              Array [
                null,
                Array [
                  Array [
                    "o",
                  ],
                  Array [
                    "w",
                  ],
                  Array [
                    "n",
                  ],
                  Array [
                    "e",
                  ],
                  Array [
                    "r",
                  ],
                ],
              ],
              Array [],
            ],
            Array [
              Array [
                " ",
              ],
            ],
            Array [
              "as",
              Array [
                Array [
                  " ",
                ],
              ],
            ],
            Array [
              Array [
                Array [
                  null,
                  Array [
                    Array [
                      "s",
                    ],
                    Array [
                      "e",
                    ],
                    Array [
                      "l",
                    ],
                    Array [
                      "f",
                    ],
                  ],
                ],
                Array [],
              ],
            ],
          ],
          Array [
            Array [
              Array [
                Array [
                  Array [],
                ],
                "
",
              ],
            ],
          ],
        ],
      ],
      Array [
        Array [
          Array [],
          Array [
            Array [
              Array [
                "    define",
                Array [
                  Array [
                    " ",
                  ],
                ],
              ],
              Array [
                Array [
                  null,
                  Array [
                    Array [
                      "r",
                    ],
                    Array [
                      "e",
                    ],
                    Array [
                      "a",
                    ],
                    Array [
                      "d",
                    ],
                    Array [
                      "e",
                    ],
                    Array [
                      "r",
                    ],
                  ],
                ],
                Array [],
              ],
              Array [
                Array [
                  " ",
                ],
              ],
              Array [
                "as",
                Array [
                  Array [
                    " ",
                  ],
                ],
              ],
              Array [
                Array [
                  Array [
                    null,
                    Array [
                      Array [
                        "s",
                      ],
                      Array [
                        "e",
                      ],
                      Array [
                        "l",
                      ],
                      Array [
                        "f",
                      ],
                    ],
                  ],
                  Array [
                    " ",
                  ],
                ],
              ],
            ],
            Array [
              Array [
                Array [
                  "or",
                  Array [
                    Array [
                      " ",
                    ],
                  ],
                  Array [
                    Array [
                      Array [
                        null,
                        Array [
                          Array [
                            "t",
                          ],
                          Array [
                            "r",
                          ],
                          Array [
                            "i",
                          ],
                          Array [
                            "a",
                          ],
                          Array [
                            "g",
                          ],
                          Array [
                            "e",
                          ],
                          Array [
                            "r",
                          ],
                        ],
                      ],
                      Array [
                        " ",
                      ],
                    ],
                  ],
                ],
              ],
              Array [
                Array [
                  "or",
                  Array [
                    Array [
                      " ",
                    ],
                  ],
                  Array [
                    Array [
                      Array [
                        Array [
                          null,
                          Array [
                            Array [
                              "r",
                            ],
                            Array [
                              "e",
                            ],
                            Array [
                              "p",
                            ],
                            Array [
                              "o",
                            ],
                            Array [
                              "_",
                            ],
                            Array [
                              "r",
                            ],
                            Array [
                              "e",
                            ],
                            Array [
                              "a",
                            ],
                            Array [
                              "d",
                            ],
                            Array [
                              "e",
                            ],
                            Array [
                              "r",
                            ],
                          ],
                        ],
                        Array [],
                      ],
                      Array [
                        Array [
                          " ",
                        ],
                      ],
                      "from",
                      Array [
                        Array [
                          " ",
                        ],
                      ],
                      Array [
                        Array [
                          null,
                          Array [
                            Array [
                              "o",
                            ],
                            Array [
                              "w",
                            ],
                            Array [
                              "n",
                            ],
                            Array [
                              "e",
                            ],
                            Array [
                              "r",
                            ],
                          ],
                        ],
                        Array [],
                      ],
                    ],
                  ],
                ],
              ],
            ],
          ],
          Array [
            Array [
              Array [
                Array [
                  Array [],
                ],
                "
",
              ],
            ],
          ],
        ],
      ],
      Array [
        Array [
          Array [],
          Array [
            Array [
              Array [
                "    define",
                Array [
                  Array [
                    " ",
                  ],
                ],
              ],
              Array [
                Array [
                  null,
                  Array [
                    Array [
                      "t",
                    ],
                    Array [
                      "r",
                    ],
                    Array [
                      "i",
                    ],
                    Array [
                      "a",
                    ],
                    Array [
                      "g",
                    ],
                    Array [
                      "e",
                    ],
                    Array [
                      "r",
                    ],
                  ],
                ],
                Array [],
              ],
              Array [
                Array [
                  " ",
                ],
              ],
              Array [
                "as",
                Array [
                  Array [
                    " ",
                  ],
                ],
              ],
              Array [
                Array [
                  Array [
                    null,
                    Array [
                      Array [
                        "s",
                      ],
                      Array [
                        "e",
                      ],
                      Array [
                        "l",
                      ],
                      Array [
                        "f",
                      ],
                    ],
                  ],
                  Array [
                    " ",
                  ],
                ],
              ],
            ],
            Array [
              Array [
                Array [
                  "or",
                  Array [
                    Array [
                      " ",
                    ],
                  ],
                  Array [
                    Array [
                      Array [
                        null,
                        Array [
                          Array [
                            "w",
                          ],
                          Array [
                            "r",
                          ],
                          Array [
                            "i",
                          ],
                          Array [
                            "t",
                          ],
                          Array [
                            "e",
                          ],
                          Array [
                            "r",
                          ],
                        ],
                      ],
                      Array [],
                    ],
                  ],
                ],
              ],
            ],
          ],
          Array [
            Array [
              Array [
                Array [
                  Array [],
                ],
                "
",
              ],
            ],
          ],
        ],
      ],
      Array [
        Array [
          Array [],
          Array [
            Array [
              Array [
                "    define",
                Array [
                  Array [
                    " ",
                  ],
                ],
              ],
              Array [
                Array [
                  null,
                  Array [
                    Array [
                      "w",
                    ],
                    Array [
                      "r",
                    ],
                    Array [
                      "i",
                    ],
                    Array [
                      "t",
                    ],
                    Array [
                      "e",
                    ],
                    Array [
                      "r",
                    ],
                  ],
                ],
                Array [],
              ],
              Array [
                Array [
                  " ",
                ],
              ],
              Array [
                "as",
                Array [
                  Array [
                    " ",
                  ],
                ],
              ],
              Array [
                Array [
                  Array [
                    null,
                    Array [
                      Array [
                        "s",
                      ],
                      Array [
                        "e",
                      ],
                      Array [
                        "l",
                      ],
                      Array [
                        "f",
                      ],
                    ],
                  ],
                  Array [
                    " ",
                  ],
                ],
              ],
            ],
            Array [
              Array [
                Array [
                  "or",
                  Array [
                    Array [
                      " ",
                    ],
                  ],
                  Array [
                    Array [
                      Array [
                        null,
                        Array [
                          Array [
                            "m",
                          ],
                          Array [
                            "a",
                          ],
                          Array [
                            "i",
                          ],
                          Array [
                            "n",
                          ],
                          Array [
                            "t",
                          ],
                          Array [
                            "a",
                          ],
                          Array [
                            "i",
                          ],
                          Array [
                            "n",
                          ],
                          Array [
                            "e",
                          ],
                          Array [
                            "r",
                          ],
                        ],
                      ],
                      Array [
                        " ",
                      ],
                    ],
                  ],
                ],
              ],
              Array [
                Array [
                  "or",
                  Array [
                    Array [
                      " ",
                    ],
                  ],
                  Array [
                    Array [
                      Array [
                        Array [
                          null,
                          Array [
                            Array [
                              "r",
                            ],
                            Array [
                              "e",
                            ],
                            Array [
                              "p",
                            ],
                            Array [
                              "o",
                            ],
                            Array [
                              "_",
                            ],
                            Array [
                              "w",
                            ],
                            Array [
                              "r",
                            ],
                            Array [
                              "i",
                            ],
                            Array [
                              "t",
                            ],
                            Array [
                              "e",
                            ],
                            Array [
                              "r",
                            ],
                          ],
                        ],
                        Array [],
                      ],
                      Array [
                        Array [
                          " ",
                        ],
                      ],
                      "from",
                      Array [
                        Array [
                          " ",
                        ],
                      ],
                      Array [
                        Array [
                          null,
                          Array [
                            Array [
                              "o",
                            ],
                            Array [
                              "w",
                            ],
                            Array [
                              "n",
                            ],
                            Array [
                              "e",
                            ],
                            Array [
                              "r",
                            ],
                          ],
                        ],
                        Array [],
                      ],
                    ],
                  ],
                ],
              ],
            ],
          ],
          Array [
            Array [
              Array [
                Array [
                  Array [],
                ],
                "
",
              ],
            ],
            Array [
              Array [
                Array [
                  Array [],
                ],
                "
",
              ],
            ],
          ],
        ],
      ],
    ],
  ],
  Array [
    Array [
      Array [],
      Array [
        "type",
        Array [
          Array [
            " ",
          ],
        ],
      ],
      Array [
        Array [
          null,
          Array [
            Array [
              "o",
            ],
            Array [
              "r",
            ],
            Array [
              "g",
            ],
          ],
        ],
        Array [],
      ],
      Array [
        Array [
          Array [
            Array [
              Array [],
            ],
            "
",
          ],
        ],
      ],
    ],
    Array [
      Array [],
      Array [
        "  relations",
        Array [],
      ],
      Array [
        Array [
          Array [
            Array [
              Array [],
            ],
            "
",
          ],
        ],
      ],
    ],
    Array [
      Array [
        Array [
          Array [],
          Array [
            Array [
              Array [
                "    define",
                Array [
                  Array [
                    " ",
                  ],
                ],
              ],
              Array [
                Array [
                  null,
                  Array [
                    Array [
                      "b",
                    ],
                    Array [
                      "i",
                    ],
                    Array [
                      "l",
                    ],
                    Array [
                      "l",
                    ],
                    Array [
                      "i",
                    ],
                    Array [
                      "n",
                    ],
                    Array [
                      "g",
                    ],
                    Array [
                      "_",
                    ],
                    Array [
                      "m",
                    ],
                    Array [
                      "a",
                    ],
                    Array [
                      "n",
                    ],
                    Array [
                      "a",
                    ],
                    Array [
                      "g",
                    ],
                    Array [
                      "e",
                    ],
                    Array [
                      "r",
                    ],
                  ],
                ],
                Array [],
              ],
              Array [
                Array [
                  " ",
                ],
              ],
              Array [
                "as",
                Array [
                  Array [
                    " ",
                  ],
                ],
              ],
              Array [
                Array [
                  Array [
                    null,
                    Array [
                      Array [
                        "s",
                      ],
                      Array [
                        "e",
                      ],
                      Array [
                        "l",
                      ],
                      Array [
                        "f",
                      ],
                    ],
                  ],
                  Array [
                    " ",
                  ],
                ],
              ],
            ],
            Array [
              Array [
                Array [
                  "or",
                  Array [
                    Array [
                      " ",
                    ],
                  ],
                  Array [
                    Array [
                      Array [
                        null,
                        Array [
                          Array [
                            "o",
                          ],
                          Array [
                            "w",
                          ],
                          Array [
                            "n",
                          ],
                          Array [
                            "e",
                          ],
                          Array [
                            "r",
                          ],
                        ],
                      ],
                      Array [],
                    ],
                  ],
                ],
              ],
            ],
          ],
          Array [
            Array [
              Array [
                Array [
                  Array [],
                ],
                "
",
              ],
            ],
          ],
        ],
      ],
      Array [
        Array [
          Array [],
          Array [
            Array [
              Array [
                "    define",
                Array [
                  Array [
                    " ",
                  ],
                ],
              ],
              Array [
                Array [
                  null,
                  Array [
                    Array [
                      "m",
                    ],
                    Array [
                      "e",
                    ],
                    Array [
                      "m",
                    ],
                    Array [
                      "b",
                    ],
                    Array [
                      "e",
                    ],
                    Array [
                      "r",
                    ],
                  ],
                ],
                Array [],
              ],
              Array [
                Array [
                  " ",
                ],
              ],
              Array [
                "as",
                Array [
                  Array [
                    " ",
                  ],
                ],
              ],
              Array [
                Array [
                  Array [
                    null,
                    Array [
                      Array [
                        "s",
                      ],
                      Array [
                        "e",
                      ],
                      Array [
                        "l",
                      ],
                      Array [
                        "f",
                      ],
                    ],
                  ],
                  Array [
                    " ",
                  ],
                ],
              ],
            ],
            Array [
              Array [
                Array [
                  "or",
                  Array [
                    Array [
                      " ",
                    ],
                  ],
                  Array [
                    Array [
                      Array [
                        null,
                        Array [
                          Array [
                            "o",
                          ],
                          Array [
                            "w",
                          ],
                          Array [
                            "n",
                          ],
                          Array [
                            "e",
                          ],
                          Array [
                            "r",
                          ],
                        ],
                      ],
                      Array [],
                    ],
                  ],
                ],
              ],
            ],
          ],
          Array [
            Array [
              Array [
                Array [
                  Array [],
                ],
                "
",
              ],
            ],
          ],
        ],
      ],
      Array [
        Array [
          Array [],
          Array [
            Array [
              "    define",
              Array [
                Array [
                  " ",
                ],
              ],
            ],
            Array [
              Array [
                null,
                Array [
                  Array [
                    "o",
                  ],
                  Array [
                    "w",
                  ],
                  Array [
                    "n",
                  ],
                  Array [
                    "e",
                  ],
                  Array [
                    "r",
                  ],
                ],
              ],
              Array [],
            ],
            Array [
              Array [
                " ",
              ],
            ],
            Array [
              "as",
              Array [
                Array [
                  " ",
                ],
              ],
            ],
            Array [
              Array [
                Array [
                  null,
                  Array [
                    Array [
                      "s",
                    ],
                    Array [
                      "e",
                    ],
                    Array [
                      "l",
                    ],
                    Array [
                      "f",
                    ],
                  ],
                ],
                Array [],
              ],
            ],
          ],
          Array [
            Array [
              Array [
                Array [
                  Array [],
                ],
                "
",
              ],
            ],
          ],
        ],
      ],
      Array [
        Array [
          Array [],
          Array [
            Array [
              "    define",
              Array [
                Array [
                  " ",
                ],
              ],
            ],
            Array [
              Array [
                null,
                Array [
                  Array [
                    "r",
                  ],
                  Array [
                    "e",
                  ],
                  Array [
                    "p",
                  ],
                  Array [
                    "o",
                  ],
                  Array [
                    "_",
                  ],
                  Array [
                    "a",
                  ],
                  Array [
                    "d",
                  ],
                  Array [
                    "m",
                  ],
                  Array [
                    "i",
                  ],
                  Array [
                    "n",
                  ],
                ],
              ],
              Array [],
            ],
            Array [
              Array [
                " ",
              ],
            ],
            Array [
              "as",
              Array [
                Array [
                  " ",
                ],
              ],
            ],
            Array [
              Array [
                Array [
                  null,
                  Array [
                    Array [
                      "s",
                    ],
                    Array [
                      "e",
                    ],
                    Array [
                      "l",
                    ],
                    Array [
                      "f",
                    ],
                  ],
                ],
                Array [],
              ],
            ],
          ],
          Array [
            Array [
              Array [
                Array [
                  Array [],
                ],
                "
",
              ],
            ],
          ],
        ],
      ],
      Array [
        Array [
          Array [],
          Array [
            Array [
              "    define",
              Array [
                Array [
                  " ",
                ],
              ],
            ],
            Array [
              Array [
                null,
                Array [
                  Array [
                    "r",
                  ],
                  Array [
                    "e",
                  ],
                  Array [
                    "p",
                  ],
                  Array [
                    "o",
                  ],
                  Array [
                    "_",
                  ],
                  Array [
                    "r",
                  ],
                  Array [
                    "e",
                  ],
                  Array [
                    "a",
                  ],
                  Array [
                    "d",
                  ],
                  Array [
                    "e",
                  ],
                  Array [
                    "r",
                  ],
                ],
              ],
              Array [],
            ],
            Array [
              Array [
                " ",
              ],
            ],
            Array [
              "as",
              Array [
                Array [
                  " ",
                ],
              ],
            ],
            Array [
              Array [
                Array [
                  null,
                  Array [
                    Array [
                      "s",
                    ],
                    Array [
                      "e",
                    ],
                    Array [
                      "l",
                    ],
                    Array [
                      "f",
                    ],
                  ],
                ],
                Array [],
              ],
            ],
          ],
          Array [
            Array [
              Array [
                Array [
                  Array [],
                ],
                "
",
              ],
            ],
          ],
        ],
      ],
      Array [
        Array [
          Array [],
          Array [
            Array [
              "    define",
              Array [
                Array [
                  " ",
                ],
              ],
            ],
            Array [
              Array [
                null,
                Array [
                  Array [
                    "r",
                  ],
                  Array [
                    "e",
                  ],
                  Array [
                    "p",
                  ],
                  Array [
                    "o",
                  ],
                  Array [
                    "_",
                  ],
                  Array [
                    "w",
                  ],
                  Array [
                    "r",
                  ],
                  Array [
                    "i",
                  ],
                  Array [
                    "t",
                  ],
                  Array [
                    "e",
                  ],
                  Array [
                    "r",
                  ],
                ],
              ],
              Array [],
            ],
            Array [
              Array [
                " ",
              ],
            ],
            Array [
              "as",
              Array [
                Array [
                  " ",
                ],
              ],
            ],
            Array [
              Array [
                Array [
                  null,
                  Array [
                    Array [
                      "s",
                    ],
                    Array [
                      "e",
                    ],
                    Array [
                      "l",
                    ],
                    Array [
                      "f",
                    ],
                  ],
                ],
                Array [],
              ],
            ],
          ],
          Array [
            Array [
              Array [
                Array [
                  Array [],
                ],
                "
",
              ],
            ],
            Array [
              Array [
                Array [
                  Array [],
                ],
                "
",
              ],
            ],
          ],
        ],
      ],
    ],
  ],
  Array [
    Array [
      Array [],
      Array [
        "type",
        Array [
          Array [
            " ",
          ],
        ],
      ],
      Array [
        Array [
          null,
          Array [
            Array [
              "a",
            ],
            Array [
              "p",
            ],
            Array [
              "p",
            ],
          ],
        ],
        Array [],
      ],
      Array [
        Array [
          Array [
            Array [
              Array [],
            ],
            "
",
          ],
        ],
      ],
    ],
    Array [
      Array [],
      Array [
        "  relations",
        Array [],
      ],
      Array [
        Array [
          Array [
            Array [
              Array [],
            ],
            "
",
          ],
        ],
      ],
    ],
    Array [
      Array [
        Array [
          Array [],
          Array [
            Array [
              Array [
                "    define",
                Array [
                  Array [
                    " ",
                  ],
                ],
              ],
              Array [
                Array [
                  null,
                  Array [
                    Array [
                      "a",
                    ],
                    Array [
                      "p",
                    ],
                    Array [
                      "p",
                    ],
                    Array [
                      "_",
                    ],
                    Array [
                      "m",
                    ],
                    Array [
                      "a",
                    ],
                    Array [
                      "n",
                    ],
                    Array [
                      "a",
                    ],
                    Array [
                      "g",
                    ],
                    Array [
                      "e",
                    ],
                    Array [
                      "r",
                    ],
                  ],
                ],
                Array [],
              ],
              Array [
                Array [
                  " ",
                ],
              ],
              Array [
                "as",
                Array [
                  Array [
                    " ",
                  ],
                ],
              ],
              Array [
                Array [
                  Array [
                    null,
                    Array [
                      Array [
                        "s",
                      ],
                      Array [
                        "e",
                      ],
                      Array [
                        "l",
                      ],
                      Array [
                        "f",
                      ],
                    ],
                  ],
                  Array [
                    " ",
                  ],
                ],
              ],
            ],
            Array [
              Array [
                Array [
                  "or",
                  Array [
                    Array [
                      " ",
                    ],
                  ],
                  Array [
                    Array [
                      Array [
                        Array [
                          null,
                          Array [
                            Array [
                              "o",
                            ],
                            Array [
                              "w",
                            ],
                            Array [
                              "n",
                            ],
                            Array [
                              "e",
                            ],
                            Array [
                              "r",
                            ],
                          ],
                        ],
                        Array [],
                      ],
                      Array [
                        Array [
                          " ",
                        ],
                      ],
                      "from",
                      Array [
                        Array [
                          " ",
                        ],
                      ],
                      Array [
                        Array [
                          null,
                          Array [
                            Array [
                              "o",
                            ],
                            Array [
                              "w",
                            ],
                            Array [
                              "n",
                            ],
                            Array [
                              "e",
                            ],
                            Array [
                              "r",
                            ],
                          ],
                        ],
                        Array [],
                      ],
                    ],
                  ],
                ],
              ],
            ],
          ],
          Array [
            Array [
              Array [
                Array [
                  Array [],
                ],
                "
",
              ],
            ],
          ],
        ],
      ],
      Array [
        Array [
          Array [],
          Array [
            Array [
              "    define",
              Array [
                Array [
                  " ",
                ],
              ],
            ],
            Array [
              Array [
                null,
                Array [
                  Array [
                    "o",
                  ],
                  Array [
                    "w",
                  ],
                  Array [
                    "n",
                  ],
                  Array [
                    "e",
                  ],
                  Array [
                    "r",
                  ],
                ],
              ],
              Array [],
            ],
            Array [
              Array [
                " ",
              ],
            ],
            Array [
              "as",
              Array [
                Array [
                  " ",
                ],
              ],
            ],
            Array [
              Array [
                Array [
                  null,
                  Array [
                    Array [
                      "s",
                    ],
                    Array [
                      "e",
                    ],
                    Array [
                      "l",
                    ],
                    Array [
                      "f",
                    ],
                  ],
                ],
                Array [],
              ],
            ],
          ],
          Array [],
        ],
      ],
    ],
  ],
]
`;

exports[`DSL parseDSL() should correctly parse a simple sample 1`] = `
Array [
  Array [
    Array [
      Array [],
      Array [
        "type",
        Array [
          Array [
            " ",
          ],
        ],
      ],
      Array [
        Array [
          null,
          Array [
            Array [
              "g",
            ],
            Array [
              "r",
            ],
            Array [
              "o",
            ],
            Array [
              "u",
            ],
            Array [
              "p",
            ],
          ],
        ],
        Array [],
      ],
      Array [
        Array [
          Array [
            Array [
              Array [],
            ],
            "
",
          ],
        ],
      ],
    ],
    Array [
      Array [],
      Array [
        "  relations",
        Array [],
      ],
      Array [
        Array [
          Array [
            Array [
              Array [],
            ],
            "
",
          ],
        ],
      ],
    ],
    Array [
      Array [
        Array [
          Array [],
          Array [
            Array [
              "    define",
              Array [
                Array [
                  " ",
                ],
              ],
            ],
            Array [
              Array [
                null,
                Array [
                  Array [
                    "w",
                  ],
                  Array [
                    "r",
                  ],
                  Array [
                    "i",
                  ],
                  Array [
                    "t",
                  ],
                  Array [
                    "e",
                  ],
                  Array [
                    "r",
                  ],
                ],
              ],
              Array [],
            ],
            Array [
              Array [
                " ",
              ],
            ],
            Array [
              "as",
              Array [
                Array [
                  " ",
                ],
              ],
            ],
            Array [
              Array [
                Array [
                  null,
                  Array [
                    Array [
                      "s",
                    ],
                    Array [
                      "e",
                    ],
                    Array [
                      "l",
                    ],
                    Array [
                      "f",
                    ],
                  ],
                ],
                Array [],
              ],
            ],
          ],
          Array [],
        ],
      ],
    ],
  ],
]
`;
